Adding Firebase to project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
                     <button id="add-button">Add to cart</button>
                 <ul id="ul-el"></ul>
         </div>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
