Route to manifest

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>Add to Cart</title>
+        
         <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="site.webmanifest">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
     </head>
@@ -13,7 +14,7 @@
         <div class="container">
             <img src="./assets/cat.png"/>
                 <input type="text" id="input-field" placeholder="Bread">
-                    <button id="add-button">Add to cart</button>
+                    <button type="submit" id="add-button">Add to cart</button>
                 <ul id="ul-el"></ul>
         </div>
         <script src="index.js" type="module"></script>
